crates/excalidraw-mermaid/tests/snapshots/excalidraw@class_namespaces.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw JSON for class_namespaces.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:classDiagram",
  "elements": [
    {
      "type": "rectangle",
      "id": "mm-class-node-Order",
      "x": 315.2421875,
      "y": 523.0,
      "width": 170.59375,
      "height": 168.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-class-nodetext-Order",
          "type": "text"
        },
        {
          "id": "mm-class-edge-1",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-class-nodetext-Order",
      "x": 315.2421875,
      "y": 523.0,
      "width": 170.59375,
      "height": 168.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "Order\n+int id\n+Date created_at\n+float total",
      "originalText": "Order\n+int id\n+Date created_at\n+float total",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-class-node-Order"
    },
    {
      "type": "rectangle",
      "id": "mm-class-node-OrderService",
      "x": 144.0390625,
      "y": 25.0,
      "width": 297.2109375,
      "height": 150.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-class-nodetext-OrderService",
          "type": "text"
        },
        {
          "id": "mm-class-edge-1",
          "type": "arrow"
        },
        {
          "id": "mm-class-edge-2",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-class-nodetext-OrderService",
      "x": 144.0390625,
      "y": 25.0,
      "width": 297.2109375,
      "height": 150.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "OrderService\n---\n+placeOrder(int userId) : Order\n+cancelOrder(int id) : bool",
      "originalText": "OrderService\n---\n+placeOrder(int userId) : Order\n+cancelOrder(int id) : bool",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-class-node-OrderService"
    },
    {
      "type": "rectangle",
      "id": "mm-class-node-User",
      "x": 117.05859375,
      "y": 523.0,
      "width": 135.3828125,
      "height": 168.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-class-nodetext-User",
          "type": "text"
        },
        {
          "id": "mm-class-edge-0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-class-nodetext-User",
      "x": 117.05859375,
      "y": 523.0,
      "width": 135.3828125,
      "height": 168.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "User\n+int id\n+String name\n+String email",
      "originalText": "User\n+int id\n+String name\n+String email",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-class-node-User"
    },
    {
      "type": "rectangle",
      "id": "mm-class-node-UserService",
      "x": 35.0,
      "y": 249.0,
      "width": 299.5,
      "height": 150.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-class-nodetext-UserService",
          "type": "text"
        },
        {
          "id": "mm-class-edge-0",
          "type": "arrow"
        },
        {
          "id": "mm-class-edge-2",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-class-nodetext-UserService",
      "x": 35.0,
      "y": 249.0,
      "width": 299.5,
      "height": 150.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "UserService\n---\n+getUser(int id) : User\n+createUser(String name) : User",
      "originalText": "UserService\n---\n+getUser(int id) : User\n+createUser(String name) : User",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-class-node-UserService"
    },
    {
      "type": "arrow",
      "id": "mm-class-edge-0",
      "x": 184.75,
      "y": 399.0,
      "width": 0.0,
      "height": 124.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          25.0
        ],
        [
          0.0,
          62.0
        ],
        [
          0.0,
          99.0
        ],
        [
          0.0,
          124.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "triangle",
      "startBinding": {
        "elementId": "mm-class-node-UserService",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-class-node-User",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-class-edge-1",
      "x": 364.8953334263393,
      "y": 175.0,
      "width": 35.64372907366072,
      "height": 348.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          35.64372907366072,
          37.0
        ],
        [
          35.64372907366072,
          149.0
        ],
        [
          35.64372907366072,
          249.0
        ],
        [
          35.64372907366072,
          286.0
        ],
        [
          35.64372907366072,
          323.0
        ],
        [
          35.64372907366072,
          348.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "triangle",
      "startBinding": {
        "elementId": "mm-class-node-OrderService",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-class-node-Order",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "arrow",
      "id": "mm-class-edge-2",
      "x": 220.39372907366072,
      "y": 175.0,
      "width": 35.64372907366072,
      "height": 74.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          -35.64372907366072,
          37.0
        ],
        [
          -35.64372907366072,
          74.0
        ]
      ],
      "startArrowhead": null,
      "endArrowhead": "triangle",
      "startBinding": {
        "elementId": "mm-class-node-OrderService",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-class-node-UserService",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
