crates/excalidraw-mermaid/tests/snapshots/excalidraw@er_basic.snap
---
source: crates/excalidraw-mermaid/tests/snapshots.rs
description: Mermaid → Excalidraw JSON for er_basic.mmd
expression: json
---
{
  "type": "excalidraw",
  "version": 2,
  "source": "excalidraw-mermaid:er",
  "elements": [
    {
      "type": "rectangle",
      "id": "mm-er-node-entity-CUSTOMER-0",
      "x": 15.6328125,
      "y": 0.0,
      "width": 129.546875,
      "height": 128.25,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-er-nodetext-entity-CUSTOMER-0",
          "type": "text"
        },
        {
          "id": "mm-er-edge-er-rel-0",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-er-nodetext-entity-CUSTOMER-0",
      "x": 15.6328125,
      "y": 0.0,
      "width": 129.546875,
      "height": 128.25,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "CUSTOMER\nint id\nstring name",
      "originalText": "CUSTOMER\nint id\nstring name",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-er-node-entity-CUSTOMER-0"
    },
    {
      "type": "rectangle",
      "id": "mm-er-node-entity-LINE-ITEM-2",
      "x": 24.9453125,
      "y": 458.5,
      "width": 110.921875,
      "height": 84.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-er-nodetext-entity-LINE-ITEM-2",
          "type": "text"
        },
        {
          "id": "mm-er-edge-er-rel-1",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-er-nodetext-entity-LINE-ITEM-2",
      "x": 24.9453125,
      "y": 458.5,
      "width": 110.921875,
      "height": 84.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "LINE-ITEM",
      "originalText": "LINE-ITEM",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-er-node-entity-LINE-ITEM-2"
    },
    {
      "type": "rectangle",
      "id": "mm-er-node-entity-ORDER-1",
      "x": 0.0,
      "y": 229.25,
      "width": 160.8125,
      "height": 128.25,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "#e9ecef",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [
        {
          "id": "mm-er-nodetext-entity-ORDER-1",
          "type": "text"
        },
        {
          "id": "mm-er-edge-er-rel-0",
          "type": "arrow"
        },
        {
          "id": "mm-er-edge-er-rel-1",
          "type": "arrow"
        }
      ],
      "updated": 0,
      "link": null,
      "locked": false
    },
    {
      "type": "text",
      "id": "mm-er-nodetext-entity-ORDER-1",
      "x": 0.0,
      "y": 229.25,
      "width": 160.8125,
      "height": 128.25,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "ORDER\nint id\ndate created_at",
      "originalText": "ORDER\nint id\ndate created_at",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": "mm-er-node-entity-ORDER-1"
    },
    {
      "type": "text",
      "id": "mm-er-edgelabel-er-rel-0",
      "x": 80.40625,
      "y": 178.75,
      "width": 39.53125,
      "height": 21.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "places",
      "originalText": "places",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": null
    },
    {
      "type": "arrow",
      "id": "mm-er-edge-er-rel-0",
      "x": 80.40625,
      "y": 128.25,
      "width": 0.0,
      "height": 101.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          50.5
        ],
        [
          0.0,
          101.0
        ]
      ],
      "startArrowhead": "bar",
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-er-node-entity-CUSTOMER-0",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-er-node-entity-ORDER-1",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    },
    {
      "type": "text",
      "id": "mm-er-edgelabel-er-rel-1",
      "x": 80.40625,
      "y": 408.0,
      "width": 52.3125,
      "height": 21.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "text": "contains",
      "originalText": "contains",
      "fontSize": 16.0,
      "fontFamily": 5,
      "textAlign": "center",
      "verticalAlign": "middle",
      "lineHeight": 1.25,
      "autoResize": true,
      "containerId": null
    },
    {
      "type": "arrow",
      "id": "mm-er-edge-er-rel-1",
      "x": 80.40625,
      "y": 357.5,
      "width": 0.0,
      "height": 101.0,
      "angle": 0.0,
      "strokeColor": "#1e1e1e",
      "backgroundColor": "transparent",
      "fillStyle": "solid",
      "strokeWidth": 2.0,
      "strokeStyle": "solid",
      "roughness": 1.0,
      "opacity": 100.0,
      "seed": 1337,
      "version": 1,
      "versionNonce": 0,
      "isDeleted": false,
      "groupIds": [],
      "frameId": null,
      "boundElements": [],
      "updated": 0,
      "link": null,
      "locked": false,
      "points": [
        [
          0.0,
          0.0
        ],
        [
          0.0,
          50.5
        ],
        [
          0.0,
          101.0
        ]
      ],
      "startArrowhead": "bar",
      "endArrowhead": "arrow",
      "startBinding": {
        "elementId": "mm-er-node-entity-ORDER-1",
        "focus": 0.0,
        "gap": 4.0
      },
      "endBinding": {
        "elementId": "mm-er-node-entity-LINE-ITEM-2",
        "focus": 0.0,
        "gap": 4.0
      },
      "elbowed": false,
      "lastCommittedPoint": null
    }
  ],
  "appState": {
    "viewBackgroundColor": "#ffffff",
    "gridSize": 20,
    "theme": "light"
  },
  "files": {}
}
